# KadenzeAudioPlugin

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
kap/: CMakeLists.txt  Editor.cpp  Editor.h  Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h  Processor.cpp  Processor.h  Smoothing.h
kap/components/: VuMeter.cpp  VuMeter.h
kap/dsp/: CMakeLists.txt  Clipping.h  Delay.cpp  Delay.h  Gain.cpp  Gain.h  Lfo.cpp  Lfo.h
kap/managers/: PresetManager.cpp
kap/ui/: CenterPanel.cpp  CenterPanel.h  CenterPanelMenuBar.cpp  CenterPanelMenuBar.h  FxPanel.cpp  FxPanel.h  GainPanel.cpp  GainPanel.h  LookAndFeel.cpp  LookAndFeel.h  MainPanel.cpp  MainPanel.h  PanelBase.cpp  PanelBase.h  ParameterComboBox.cpp  ParameterComboBox.h  ParameterDial.cpp  ParameterDial.h  TopPanel.cpp  TopPanel.h
kap/util/: Clipping.h  Interpolation.h  Smoothing.h
